bug fix for big header images on small devices

--- a/less/basic.less
+++ b/less/basic.less
@@ -21,6 +21,11 @@ body {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	position: relative;
+	
+	> img {
+		max-width: 100%;
+		height: auto;
+	}
 }
 
 header .header-info {
